tests/baselines/reference/implementingAnInterfaceExtendingClassWithPrivates.errors.txt
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts(9,7): error TS2420: Class 'Bar' incorrectly implements interface 'I'.
  Type 'Bar' is missing the following properties from type 'I': y, x
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts(12,7): error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
  Property 'x' is missing in type 'Bar2' but required in type 'I'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts(16,7): error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
  Property 'x' is private in type 'I' but not in type 'Bar3'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts(21,7): error TS2420: Class 'Bar4' incorrectly implements interface 'I'.
  Types have separate declarations of a private property 'x'.


==== tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts (4 errors) ====
    class Foo {
        private x: string;
    }
    
    interface I extends Foo {
        y: number;
    }
    
    class Bar implements I { // error
          ~~~
!!! error TS2420: Class '{|Bar|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Type 'Bar' is missing the following properties from type 'I': y, x
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:9:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:5:11
    }
    
    class Bar2 implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar2|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'x' is missing in type '{|Bar2|2|}' but required in type '{|I|3|}'.
!!! related TS2728 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:2:13: 'x' is declared here.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:12:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:5:11
!!! annotated symbol 2 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:12:7
!!! annotated symbol 3 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:5:11
        y: number;
    }
    
    class Bar3 implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar3|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'x' is private in type 'I' but not in type 'Bar3'.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:16:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:5:11
        x: string;
        y: number;
    }
    
    class Bar4 implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar4|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Types have separate declarations of a private property 'x'.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:21:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts:5:11
        private x: string;
        y: number;
    }